--- a/styles/SideBar.module.css
+++ b/styles/SideBar.module.css
@@ -33,6 +33,7 @@
     z-index: 1;
     height: 100vh;
     transform: translateX(-220px);
+    transition: transform 0.3s ease-in-out;
   }
   .container.active {
     color: red;
